tests/functional/lang/eval-fail/addDrvOutputDependencies-wrong-element-kind.err.exp
error:
       … while calling the 'addDrvOutputDependencies' builtin
         at /pwd/lang/eval-fail/addDrvOutputDependencies-wrong-element-kind.nix:13:1:
           12| in
           13| builtins.addDrvOutputDependencies drv.outPath
             | ^
           14|

       error: `addDrvOutputDependencies` can only act on derivations, not on a derivation output such as 'out'
